--- a/src/scss/components/_connect-wallet.scss
+++ b/src/scss/components/_connect-wallet.scss
@@ -30,13 +30,13 @@
     color: $color_grey_1;
   }
 
-  p[class*=center-text]{
+  p[class*='center-text'] {
     text-align: center;
   }
 
   h4 {
     margin-top: 1em;
-    margin-bottom: .25em;
+    margin-bottom: 0.25em;
   }
 
   a {
@@ -56,13 +56,13 @@
       .back-arrow {
         display: flex;
         align-items: center;
-        .icon{
+        .icon {
           background-image: url(/compound-components/assets/icn-arrow-back-dark.svg);
           width: 1.5rem;
-          opacity: .7;
+          opacity: 0.7;
         }
-        &:hover .icon{
-          opacity: 1.0;
+        &:hover .icon {
+          opacity: 1;
         }
       }
     }
@@ -206,7 +206,7 @@
 
   .dropdown:nth-of-type(1) {
     margin-top: 1em;
-    margin-bottom: .4em;
+    margin-bottom: 0.4em;
   }
 
   .dropdown:nth-of-type(2) {
