--- a/src/scss/layout/_assets.scss
+++ b/src/scss/layout/_assets.scss
@@ -122,55 +122,55 @@
   }
 
   &.BAT {
-    background-image: url(/images/asset_BAT.svg);
+    background-image: url(/compound-components/assets/asset_BAT.svg);
   }
 
   &.COMP {
-    background-image: url(/images/asset_COMP.svg);
+    background-image: url(/compound-components/assets/asset_COMP.svg);
   }
 
   &.DAI {
-    background-image: url(/images/asset_DAI.svg);
+    background-image: url(/compound-components/assets/asset_DAI.svg);
   }
 
   &.ETH,
   &.WETH {
-    background-image: url(/images/asset_ETH.svg);
+    background-image: url(/compound-components/assets/asset_ETH.svg);
   }
 
   &.LINK {
-    background-image: url(/images/asset_LINK.png);
+    background-image: url(/compound-components/assets/asset_LINK.png);
   }
 
   &.MKR {
-    background-image: url(/images/asset_MKR.svg);
+    background-image: url(/compound-components/assets/asset_MKR.svg);
   }
 
   &.REP {
-    background-image: url(/images/asset_REP.svg);
+    background-image: url(/compound-components/assets/asset_REP.svg);
   }
 
   &.SAI {
-    background-image: url(/images/asset_SAI.svg);
+    background-image: url(/compound-components/assets/asset_SAI.svg);
   }
 
   &.UNI {
-    background-image: url(/images/asset_UNI.svg);
+    background-image: url(/compound-components/assets/asset_UNI.svg);
   }
 
   &.USDC {
-    background-image: url(/images/asset_USDC.svg);
+    background-image: url(/compound-components/assets/asset_USDC.svg);
   }
 
   &.USDT {
-    background-image: url(/images/asset_USDT.svg);
+    background-image: url(/compound-components/assets/asset_USDT.svg);
   }
 
   &.WBTC {
-    background-image: url(/images/asset_BTC.svg);
+    background-image: url(/compound-components/assets/asset_BTC.svg);
   }
 
   &.ZRX {
-    background-image: url(/images/asset_ZRX.svg);
+    background-image: url(/compound-components/assets/asset_ZRX.svg);
   }
 }
