Mergw asset/icon class

--- a/src/scss/components/_icon.scss
+++ b/src/scss/components/_icon.scss
@@ -1,27 +1,32 @@
 @import '../abstracts/mixins';
 @import '../abstracts/variables';
 
-.asset {
+.icon {
   flex-shrink: 0;
   display: inline-block;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
   border-radius: 50%;
-  width: 3.375rem;
-  height: 3.375rem;
+  width: 1.8rem;
+  height: 1.8rem;
+  min-width: 1.8rem;
+  min-height: 1.8rem;
 
   &--small {
-    width: 25px;
-    height: 25px;
+    width: 1.5625rem;
+    height: 1.5625rem;
+  }
+
+  &--large {
+    width: 3.375rem;
+    height: 3.375rem;
+    min-width: 3.375rem;
+    min-height: 3.375rem;
   }
 
   &--loading {
     @extend .animated-background;
-  }
-
-  &--AMPL {
-    background-image: url('/compound-components/assets/asset_AMPL.svg');
   }
 
   &--BAT {
@@ -41,40 +46,12 @@
     background-image: url('/compound-components/assets/asset_ETH.svg');
   }
 
-  &--FXC {
-    background-image: url('/compound-components/assets/asset_FXC.svg');
-  }
-
-  &--HT {
-    background-image: url('/compound-components/assets/asset_HT.svg');
-  }
-
   &--LINK {
     background-image: url('/compound-components/assets/asset_LINK.png');
   }
 
-  &--LOOM {
-    background-image: url('/compound-components/assets/asset_LOOM.svg');
-  }
-
-  &--MANA {
-    background-image: url('/compound-components/assets/asset_MANA.svg');
-  }
-
   &--MKR {
     background-image: url('/compound-components/assets/asset_MKR.svg');
-  }
-
-  &--NMR {
-    background-image: url('/compound-components/assets/asset_NMR.svg');
-  }
-
-  &--OMG {
-    background-image: url('/compound-components/assets/asset_OMG.svg');
-  }
-
-  &--PAX {
-    background-image: url('/compound-components/assets/asset_PAX.svg');
   }
 
   &--REP {
@@ -83,18 +60,6 @@
 
   &--SAI {
     background-image: url('/compound-components/assets/asset_SAI.svg');
-  }
-
-  &--SUSD {
-    background-image: url('/compound-components/assets/asset_SUSD.svg');
-  }
-
-  &--TBTC {
-    background-image: url('/compound-components/assets/asset_TBTC.svg');
-  }
-
-  &--TUSD {
-    background-image: url('/compound-components/assets/asset_TUSD.svg');
   }
 
   &--UNI {
