Add assets, buttons, and panels (#7)
* Add assets, buttons, and panels

* Mergw asset/icon class

* consolidate panel files

* Update modal .panel to .legacy-panel

--- a/src/scss/layout/_assets.scss
+++ b/src/scss/layout/_assets.scss
@@ -1,7 +1,7 @@
 @import '../abstracts/mixins';
 @import '../abstracts/variables';
 
-@import '../components/governance-panel';
+@import '../components/panel';
 
 .asset-list {
   .icon {
@@ -29,7 +29,7 @@
   letter-spacing: 0;
   transition: none;
 
-  @include governance-row--hover();
+  @include row--hover();
 
   &:hover {
     background: inherit;
@@ -124,71 +124,5 @@
     height: 1rem;
     width: 4.1875rem;
     @extend .animated-background;
-  }
-}
-
-.icon {
-  background-size: 100% 100%;
-  border: 0;
-  width: 1.8rem;
-  height: 1.8rem;
-  min-width: 1.8rem;
-  min-height: 1.8rem;
-
-  &--loading {
-    @extend .animated-background;
-  }
-
-  &.BAT {
-    background-image: url(/compound-components/assets/asset_BAT.svg);
-  }
-
-  &.COMP {
-    background-image: url(/compound-components/assets/asset_COMP.svg);
-  }
-
-  &.DAI {
-    background-image: url(/compound-components/assets/asset_DAI.svg);
-  }
-
-  &.ETH,
-  &.WETH {
-    background-image: url(/compound-components/assets/asset_ETH.svg);
-  }
-
-  &.LINK {
-    background-image: url(/compound-components/assets/asset_LINK.png);
-  }
-
-  &.MKR {
-    background-image: url(/compound-components/assets/asset_MKR.svg);
-  }
-
-  &.REP {
-    background-image: url(/compound-components/assets/asset_REP.svg);
-  }
-
-  &.SAI {
-    background-image: url(/compound-components/assets/asset_SAI.svg);
-  }
-
-  &.UNI {
-    background-image: url(/compound-components/assets/asset_UNI.svg);
-  }
-
-  &.USDC {
-    background-image: url(/compound-components/assets/asset_USDC.svg);
-  }
-
-  &.USDT {
-    background-image: url(/compound-components/assets/asset_USDT.svg);
-  }
-
-  &.WBTC {
-    background-image: url(/compound-components/assets/asset_BTC.svg);
-  }
-
-  &.ZRX {
-    background-image: url(/compound-components/assets/asset_ZRX.svg);
   }
 }
