--- a/src/scss/components/_panel.scss
+++ b/src/scss/components/_panel.scss
@@ -1,6 +1,6 @@
 @import '../abstracts/variables';
 
-@mixin governance-row() {
+@mixin row() {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -8,8 +8,8 @@
   padding: 1.25rem $gov-column-gutter;
 }
 
-@mixin governance-row--hover {
-  @include governance-row();
+@mixin row--hover {
+  @include row();
   border-left: 2px solid transparent;
   padding-left: $gov-column-gutter - 0.125rem;
   text-transform: none;
@@ -24,7 +24,7 @@
   }
 }
 
-.governance-panel {
+.panel {
   background: #ffffff;
   box-shadow: 0px 2px 4px rgba(16, 21, 24, 0.05);
   border-radius: 4px;
@@ -163,6 +163,68 @@
           color: $color_supply;
         }
       }
+    }
+  }
+}
+
+.legacy-panel {
+  @include panel();
+  margin-bottom: $column-gutter;
+  .header {
+    display: flex;
+    flex-flow: inherit;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid $color_border;
+    padding: $column-gutter ($column-gutter * 1.5);
+    font-size: 1.1rem;
+    .icon {
+      margin-top: -1rem;
+      margin-bottom: -1rem;
+    }
+    label {
+      margin: 0;
+    }
+    h4,
+    h3 {
+      margin: 0;
+    }
+  }
+  .labels {
+    display: flex;
+    border-bottom: 1px solid $color_grey_3;
+    padding: 1rem $column-gutter 1rem;
+  }
+  //TODO: This whole section might be goin away once we update all panels to be using the governance-panel styles!
+  .content {
+    padding: 0 ($column-gutter * 1.5);
+
+    .text-largest {
+      margin: ($column-gutter * 1.5) 0;
+    }
+    p {
+      text-align: center;
+      color: $color_neutral;
+    }
+    .demi.row {
+      padding: $column-gutter 0 ($column-gutter * 1.5);
+    }
+  }
+
+  //TODO: Think about moving this into it's own component file. Lots of things use it.
+  .calculation {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid $color_grey_3;
+    padding: $column_gutter 0;
+    .description {
+      color: $color_text_muted;
+    }
+
+    &:last-of-type {
+      border-bottom: none;
+      margin-bottom: 1rem;
     }
   }
 }
