--- a/src/scss/components/_input-action-panel.scss
+++ b/src/scss/components/_input-action-panel.scss
@@ -8,7 +8,7 @@
     padding: 0 0;
   }
 
-  &.panel {
+  &.legacy-panel {
     background: $color_light_2;
 
     .icon, .asset {
@@ -191,20 +191,6 @@
     }
   }
 
-  //TODO: should really have an arrow component for this I thing
-  .arrow {
-    width: 14px;
-    height: 12px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url('/compound-components/assets/icn-build-arrows-green.svg');
-    margin-right: 8px;
-    margin-left: 8px;
-    &.borrow {
-      background-image: url('/compound-components/assets/icn-build-arrows-purple.svg');
-    }
-  }
-
   .submit-button {
     width: 25.5rem - ($gov-column-gutter * 2);
     position: absolute;
@@ -232,6 +218,10 @@
     .calculation {
       padding: 0;
       margin: 0;
+
+      &:last-of-type {
+        margin: 0;
+      }
     }
 
     @media (max-width: $device-sm) {
