Add wallet icons

--- a/src/scss/components/_icon.scss
+++ b/src/scss/components/_icon.scss
@@ -81,4 +81,16 @@
   &--ZRX {
     background-image: url('/compound-components/assets/asset_ZRX.svg');
   }
+
+  &--coinbase {
+    background-image: url('/compound-components/assets/icn-coinbase-wallet.svg');
+  }
+
+  &--ledger {
+    background-image: url('/compound-components/assets/icn-ledger.svg');
+  }
+
+  &--metamask {
+    background-image: url('/compound-components/assets/icn-metamask.svg');
+  }
 }
