--- a/src/scss/components/_icon.scss
+++ b/src/scss/components/_icon.scss
@@ -33,6 +33,10 @@
     background-image: url('/compound-components/assets/asset_BAT.svg');
   }
 
+  &--CASH {
+    background-image: url('/compound-components/assets/asset_CASH.svg');
+  }
+
   &--COMP {
     background-image: url('/compound-components/assets/asset_COMP.svg');
   }
