--- a/src/scss/components/_icon.scss
+++ b/src/scss/components/_icon.scss
@@ -34,7 +34,11 @@
   }
 
   &--CASH {
-    background-image: url('/compound-components/assets/asset_CASH.svg');
+    background-image: url('/compound-components/assets/asset_CASH--green.svg');
+
+    &--dark {
+      background-image: url('/compound-components/assets/asset_CASH--white.svg');
+    }
   }
 
   &--COMP {
