--- a/src/scss/components/_connect-wallet.scss
+++ b/src/scss/components/_connect-wallet.scss
@@ -80,12 +80,13 @@
       margin-top: -$column-gutter;
     }
 
-    .mark {
+    &__mark {
       width: 78px;
       height: 78px;
       background-size: 50%;
       background-position: center;
       box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.07);
+      background-repeat: no-repeat;
       border-radius: 100px;
 
       &--error {
