--- a/src/scss/components/_connect-wallet.scss
+++ b/src/scss/components/_connect-wallet.scss
@@ -66,93 +66,133 @@
         }
       }
     }
-    .connect-wallet-copy {
+  }
+
+  .connect-wallet-copy {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: ($column-gutter / 2);
+    padding-right: ($column-gutter / 2);
+    padding-bottom: $column-gutter;
+
+    &--small-top {
+      margin-top: -$column-gutter;
+    }
+
+    &__mark {
+      width: 78px;
+      height: 78px;
+      background-size: 50%;
+      background-position: center;
+      box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.07);
+      background-repeat: no-repeat;
+      border-radius: 100px;
+
+      &--error {
+        background-image: url(/compound-components/assets/icn-ledger-error-no-bkg.svg);
+      }
+    }
+
+    &__no-panel-header {
+      width: 100%;
       display: flex;
+      align-items: start;
       flex-direction: column;
-      align-items: center;
-      padding-left: ($column-gutter / 2);
-      padding-right: ($column-gutter / 2);
+
+      h3 {
+        margin-bottom: 0;
+      }
+    }
+
+    &__back-arrow-holder {
+      width: 100%;
+      height: 16px;
+      padding-top: $column-gutter;
       padding-bottom: $column-gutter;
 
-      &--small-top {
-        margin-top: -$column-gutter;
-      }
-
-      .mark {
-        width: 78px;
-        height: 78px;
-        background-size: 50%;
-        background-position: center;
-        box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.07);
-        border-radius: 100px;
-
-        &--error {
-          background-image: url(/compound-components/assets/icn-ledger-error-no-bkg.svg);
-        }
-      }
-
-      div.dropdown .line {
-        margin: 0;
-      }
-
-      div.dropdown__option--light {
-        p:nth-of-type(1) {
-          color: $color_dark_2;
-        }
-
-        p:only-child {
-          color: $color_grey_1;
-        }
-
+      &__back-arrow {
+        cursor: pointer;
+        height: 16px;
+        width: 16px;
+        background-image: url(/compound-components/assets/icn-arrow-back-dark.svg);
+        opacity: 0.7;
         &:hover {
-          p {
-            color: $color_supply;
-          }
+          opacity: 1;
         }
       }
+    }
 
-      div.bullet-points p {
-        margin-top: $column-gutter;
-        padding-left: ($connectItemLeftRightPadding + 2px);
-        padding-right: ($connectItemLeftRightPadding + 2px);
+    &--show-border {
+      width: 380px;
+      background-color: #ffffff;
+      border: 1px solid $color_border;
+      padding-left: $column-gutter;
+      padding-right: $column-gutter;
+      @include shadow();
+    }
+
+    div.dropdown .line {
+      margin: 0;
+    }
+
+    div.dropdown__option--light {
+      p:nth-of-type(1) {
+        color: $color_dark_2;
       }
 
-      .connect-wallet-icon {
-        flex-shrink: 0;
-        display: inline-block;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: contain;
-        width: 35px;
-        height: 35px;
-        min-width: 35px;
-        min-height: 35px;
-
-        &--coinbase {
-          background-image: url(/compound-components/assets/icn-coinbase-wallet.svg);
-          margin: 0;
-        }
-
-        &--ledger {
-          background-image: url(/compound-components/assets/icn-ledger.svg);
-          margin: 0;
-        }
-
-        &--metamask {
-          background-image: url(/compound-components/assets/icn-metamask.svg);
-          margin: 0;
-        }
-
-        &--wallet-connect {
-          background-image: url(/compound-components/assets/icn-wallet-connect.svg);
-          margin: 0;
-        }
+      p:only-child {
+        color: $color_grey_1;
       }
 
-      button {
-        width: 17.75rem;
-        margin-bottom: 64px;
+      &:hover {
+        p {
+          color: $color_supply;
+        }
       }
+    }
+
+    div.bullet-points p {
+      margin-top: $column-gutter;
+      padding-left: ($connectItemLeftRightPadding + 2px);
+      padding-right: ($connectItemLeftRightPadding + 2px);
+    }
+
+    button {
+      width: 17.75rem;
+      margin-bottom: 64px;
+    }
+  }
+
+  .connect-wallet-icon {
+    flex-shrink: 0;
+    display: inline-block;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 35px;
+    height: 35px;
+    min-width: 35px;
+    min-height: 35px;
+
+    &--coinbase {
+      background-image: url(/compound-components/assets/icn-coinbase-wallet.svg);
+      margin: 0;
+    }
+
+    &--ledger {
+      background-image: url(/compound-components/assets/icn-ledger.svg);
+      margin: 0;
+    }
+
+    &--metamask {
+      background-image: url(/compound-components/assets/icn-metamask.svg);
+      margin: 0;
+    }
+
+    &--wallet-connect {
+      background-image: url(/compound-components/assets/icn-wallet-connect.svg);
+      margin: 0;
     }
   }
 
@@ -173,6 +213,12 @@
     padding-bottom: 22px;
     border-radius: 2px;
     transition: box-shadow 0.3s ease-in-out;
+
+    &--box-border {
+      background-color: #ffffff;
+      border: 1px solid $color_border;
+      margin-bottom: 0.3125rem;
+    }
 
     .arrow {
       height: 25px;
