--- a/src/scss/components/_connect-wallet.scss
+++ b/src/scss/components/_connect-wallet.scss
@@ -83,6 +83,7 @@
     &__mark {
       width: 78px;
       height: 78px;
+      background-image: url(/compound-components/assets/compound-mark.svg);
       background-size: 50%;
       background-position: center;
       box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.07);
