Icon styles for wbtc2.

--- a/src/scss/components/_icon.scss
+++ b/src/scss/components/_icon.scss
@@ -82,7 +82,8 @@
     background-image: url('/compound-components/assets/asset_USDT.svg');
   }
 
-  &--WBTC {
+  &--WBTC,
+  &--WBTC2 {
     background-image: url('/compound-components/assets/asset_BTC.svg');
   }
 
