--- a/src/scss/components/_connect-wallet.scss
+++ b/src/scss/components/_connect-wallet.scss
@@ -98,7 +98,7 @@
     &__no-panel-header {
       width: 100%;
       display: flex;
-      align-items: start;
+      align-items: flex-start;
       flex-direction: column;
 
       h3 {
