--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -117,6 +117,12 @@ p {
   &.small {
     font-size: 12px;
   }
+
+  &.p--2 {
+    font-size: .94rem;
+    font-weight: 500;
+    line-height: 1;
+  }
 }
 
 pre {
