--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -119,23 +119,78 @@ p {
   }
 
   &.p--2 {
-    font-size: .94rem;
+    font-size: 0.94rem;
     font-weight: 500;
     line-height: 1;
   }
 }
 
 pre {
-  display: block;
-  margin: 0 0 10px 0;
-  padding: 9.5px;
-  word-break: break-all;
-  word-wrap: break-word;
+  padding: 1.43rem 1rem 1.43rem 1rem;
+  font-size: 1rem;
+  line-height: 1.25;
+  background-color: $color_light_1;
+  border-color: $color_light_1;
+  border-radius: $border-radius;
+  counter-reset: line;
+  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  text-align: left;
   white-space: pre;
-  white-space: pre-wrap;
-  background-color: #f5f5f5;
-  border: 1px solid #d9dfdb;
-  border-radius: 4px;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
+}
+
+.line-numbers {
+  background-color: $color_supply;
+  height: 100%;
+  opacity: 0.1;
+  width: 3.4375rem;
+}
+
+code {
+  background-color: $color_light_1;
+
+  .token {
+    color: $color_grey_2;
+
+    &.keyword {
+      color: $color_borrow;
+    }
+
+    &.function {
+      color: $color_supply;
+    }
+
+    &.argument {
+      color: $color_dark_2;
+    }
+
+    &.string {
+      color: $color_blue_1;
+    }
+  }
+
+  .code-line {
+    counter-increment: line;
+    padding-left: 1.43rem;
+
+    &:before {
+      margin-right: 2rem;
+      color: $color_supply;
+      content: counter(line);
+      -webkit-user-select: none;
+    }
+  }
 }
 
 .text-center {
@@ -224,4 +279,86 @@ a:hover {
 
 .italic {
   font-style: italic;
+}
+
+$background_color: #ffffff;
+$background_highlight: #fffbdd;
+$background_addition: #eaffea;
+$background_deletion: #ffecec;
+$comment_color: #969896;
+$shade0: #24292e;
+$shade1: #005cc5;
+$shade2: #df5000;
+$shade3: #d73a49;
+$shade4: #0086b3;
+$shade5: #63a35c;
+$shade6: #005cc5;
+$shade7: #795da3;
+
+.elmsh {
+  color: #9aaab1;
+  background: $color_light_2;
+  font-size: 0.9em;
+  overflow-x: scroll;
+}
+
+.elmsh-hl {
+  background: $background_highlight;
+}
+
+.elmsh-add {
+  background: $background_addition;
+}
+
+.elmsh-del {
+  background: $background_deletion;
+}
+
+.elmsh-comm {
+  color: $comment_color;
+}
+
+.elmsh1 {
+  color: $color_blue_1;
+}
+
+.elmsh2 {
+  color: $color_blue_1;
+}
+
+.elmsh3 {
+  color: $color_borrow;
+}
+
+.elmsh4 {
+  color: $color_borrow;
+}
+
+.elmsh5 {
+  color: $color_supply;
+}
+
+.elmsh6 {
+  color: $shade6;
+}
+
+.elmsh7 {
+  color: $color_dark_1;
+}
+
+.inline-code {
+  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-size: small;
+  color: $color_dark_2;
+  background-color: $color_light_2;
+  padding: 0.2rem;
+}
+
+.elmsh-line:before {
+  content: attr(data-elmsh-lc);
+  display: inline-block;
+  text-align: right;
+  width: 40px;
+  padding: 0 20px 0 0;
+  opacity: 0.3;
 }
