Address PR comments

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -9,6 +9,7 @@ $color_grey_1: #657786;
 $color_grey_2: #AAB8C1;
 $color_grey_3: #CCD6DD;
 $color_blue_1: #0DAEF3;
+$color_blue_2: #005cc5;
 $color_red_1: #DF5F67;
 
 $color_supply_light: #D4F6EC;
@@ -39,6 +40,13 @@ $color_kovan: #6C58F6;
 $color_rinkeby: #EEC55C;
 $color_goerli: #5197EB;
 $color_ropsten: #EC598D;
+
+// code/pre colors
+$background_highlight: #fffbdd;
+$background_addition: #eaffea;
+$background_deletion: #ffecec;
+$comment_color: #969896;
+
 
 //TODO: Should probably have this kept in typography but we'll leave here for now.
 @mixin typography-colors {
