--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -10,6 +10,7 @@ $color_grey_2: #AAB8C1;
 $color_grey_3: #CCD6DD;
 $color_blue_1: #0DAEF3;
 $color_blue_2: #005cc5;
+$color_blue_3: #045385;
 $color_red_1: #DF5F67;
 
 $color_supply_light: #D4F6EC;
