--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -54,11 +54,11 @@ h5 {
 
 h1 {
   font-family: 'Haas Grot Disp R';
+  font-style: normal;
   font-size: 2.462rem;
   line-height: 3.231rem;
 
   @media (min-width: $device-md) {
-    font-family: 'Haas Grot Disp R';
     font-size: 3.5rem;
     line-height: 4.5rem;
   }
@@ -66,7 +66,7 @@ h1 {
 
 h2 {
   font-family: 'Haas Grot Disp R';
-  font-style: medium;
+  font-style: normal;
   font-weight: 700;
   font-size: 2rem;
   line-height: 2.5rem;
