--- a/src/scss/components/_tabgroup.scss
+++ b/src/scss/components/_tabgroup.scss
@@ -102,8 +102,8 @@
       }
 
       &--white {
-        color: #ffffff;
-        border-color: #ffffff;
+        color: $color_light_1;
+        border-color: $color_light_1;
       }
     }
   }
