For stying options to existing components for Cash Markets. (#46)
* Add in dark option modifier to tabgroup as well as white active modifier.

* Defined section as new element of panel to handle padding for markets total cards.

* Update panel section style.

* Add option for panel with no header and reduce size of tab group text after confirming with Jayson.

* PR feedback fixes.

--- a/src/scss/components/_panel.scss
+++ b/src/scss/components/_panel.scss
@@ -75,6 +75,28 @@
         padding-right: 0;
       }
     }
+
+    &--no-header {
+      border-radius: 4px 4px 0 0;
+    }
+  }
+
+  &__section {
+    border-top: 1px solid $color_dark_1;
+
+    &--row-dividers {
+      & > div {
+        border-right: 1px solid $color_dark_1;
+
+        &:last-child {
+          border-right: none;
+        }
+      }
+    }
+
+    &__content {
+      padding: 1rem $gov-column-gutter;
+    }
   }
 
   &__footer {
