Updated Link asset and added TUSD.

--- a/src/scss/components/_icon.scss
+++ b/src/scss/components/_icon.scss
@@ -55,7 +55,7 @@
   }
 
   &--LINK {
-    background-image: url('/compound-components/assets/asset_LINK.png');
+    background-image: url('/compound-components/assets/asset_LINK.svg');
   }
 
   &--MKR {
@@ -68,6 +68,10 @@
 
   &--SAI {
     background-image: url('/compound-components/assets/asset_SAI.svg');
+  }
+
+  &--TUSD {
+    background-image: url('/compound-components/assets/asset_TUSD.svg');
   }
 
   &--UNI {
