--- a/src/scss/components/_icon.scss
+++ b/src/scss/components/_icon.scss
@@ -106,4 +106,12 @@
   &--metamask {
     background-image: url('/compound-components/assets/icn-metamask.svg');
   }
+
+  &--Eth {
+    background-image: url('/compound-components/assets/icn-ethereum.svg');
+  }
+
+  &--Poly {
+    background-image: url('/compound-components/assets/icn-polygon.svg');
+  }
 }
