--- a/src/scss/components/_icon.scss
+++ b/src/scss/components/_icon.scss
@@ -90,6 +90,10 @@
     background-image: url('/compound-components/assets/asset_USDC.svg');
   }
 
+  &--USDP {
+    background-image: url('/compound-components/assets/asset_USDP.svg');
+  }
+
   &--USDT {
     background-image: url('/compound-components/assets/asset_USDT.svg');
   }
