Add cUSDP asset and style.

--- a/src/scss/components/_ctoken.scss
+++ b/src/scss/components/_ctoken.scss
@@ -66,6 +66,10 @@
     background-image: url('/compound-components/assets/ctoken_usdc_product.svg');
   }
 
+  &--cUSDP {
+    background-image: url('/compound-components/assets/ctoken_usdp_product.svg');
+  }
+
   &--cUSDT {
     background-image: url('/compound-components/assets/ctoken_usdt_product.svg');
   }
