Add Tally as a wallet option

--- a/src/scss/components/_connect-wallet.scss
+++ b/src/scss/components/_connect-wallet.scss
@@ -191,6 +191,11 @@
       margin: 0;
     }
 
+    &--tally {
+      background-image: url(/compound-components/assets/icn-tally.svg);
+      margin: 0;
+    }
+
     &--wallet-connect {
       background-image: url(/compound-components/assets/icn-wallet-connect.svg);
       margin: 0;
